Test LightBuilder, and make fake opengl class